force-app/main/default/objects/Portal_Object__c/Portal_Object__c.object-meta.xml
<CustomObject>
    <label>Portal Object</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Portal Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>