force-app/main/default/objects/Portal_Object__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description
  >The API Name of the Salesforce Object (e.g. PWChrono_Leave__c)</description>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>