force-app/main/default/objects/Portal_Object__c/fields/Ordered_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Ordered_by_Date__c</fullName>
    <label>Ordered by Date:</label>
    <type>Date</type>
</CustomField>