force-app/main/default/objects/Portal_Object__c/fields/Production_Week_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Week_Date__c</fullName>
    <label>Production Week Date:</label>
    <type>Date</type>
</CustomField>